<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroun_image"
    android:backgroundTint="#60C6FBFD"
    android:backgroundTintMode="src_over"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnScaner"
        android:layout_width="153dp"
        android:layout_height="172dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="288dp"
        android:background="@drawable/bordes_redondos"
        android:drawablePadding="20dp"
        android:onClick="scan"
        android:padding="20dp"
        android:text="@string/btnScanear"
        android:textColor="#534425"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="153dp"
        android:layout_height="172dp"
        android:layout_marginTop="288dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/bordes_redondos"
        android:backgroundTintMode="add"
        android:drawableTop="@drawable/icono"
        android:onClick="entrar"
        android:padding="20dp"
        android:text="@string/btnEntrar"
        android:textColor="#534425"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button13"
        android:layout_width="325dp"
        android:layout_height="74dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="32dp"
        android:background="#FFDA90"
        android:text="@string/btnRegistrar"
        android:textColor="#534425"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>